--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: FSAlbert  ;
-  src: url('./font/FSAlbert Regular.otf') format('truetype');
+  src: url('./font/FSAlbert\ Light.otf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
