--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: FSAlbert  ;
-  src: url('../public//font/FSAlbert Regular.otf') format('truetype');
+  src: url('../public//font/Roboto-Regular.otf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
